--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -25,12 +25,10 @@ jobs:
       - name: Sync FederatedAI to Gitee
         uses: zengjice/hub-mirror-action@master
         with:
-          # Gitee对应的秘钥
+          src: github/zengjice
+          dst: gitee/jarviszeng
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_PRIVATE_TOKEN }}
-          # 需要同步的Github组织名（源）
-          github_org: FederatedAI
-          # 需要同步到的Gitee的组织名（目的）
-          gitee_org: FederatedAI
+          account_type: org
           force_update: true
           clone_style: "ssh"
