--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
 
-      # Runs a single command using the runners shell
+      # Runs a single command using the runners shell，d
       - name: Sync FederatedAI to Gitee
         uses: zengjice/hub-mirror-action@master
         with:
